@@ -78,7 +78,7 @@ namespace libdar
 	    /// returns the address of the top generic_file
 	generic_file *top() { if(stack.empty()) return nullptr; else return stack.back().ptr; };
 
-	    /// returns the address of teh bottom generic_file
+	    /// returns the address of the bottom generic_file
 	generic_file *bottom() { if(stack.empty()) return nullptr; else return stack[0].ptr; };
 
 	    /// returns the number of objects in the stack
